--- a/views/in-db.html
+++ b/views/in-db.html
@@ -8,11 +8,14 @@
       <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-red-200 hover:text-white"> </a>
     </div>
     <div>
-      <a href="#" class="inline-block text-xl px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-red-500 hover:bg-white mt-4 lg:mt-0">GitHub</a>
+      <a href="https://github.com/irevenko/url-shortener" class="inline-block text-xl px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-red-500 hover:bg-white mt-4 lg:mt-0">
+        <img width=28 class="inline-block" src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn.onlinewebfonts.com%2Fsvg%2Fimg_4266.png&f=1&nofb=1">
+         Github
+      </a>
     </div>
   </div>
 </nav>
-<form class="w-full max-w-sm container mx-auto mt-32" action="shorten" method="POST" id="url-form">
+<form class="w-full max-w-sm container mx-auto mt-24" action="shortener" method="POST" id="url-form">
   <label class="block text-gray-700 text-lg font-bold mb-2" for="full-url">
     Enter you URL
   </label>
