--- a/views/home.html
+++ b/views/home.html
@@ -17,7 +17,7 @@
 </nav>
 <form class="w-full max-w-sm container mx-auto mt-24" action="shortener" method="POST" id="url-form">
   <label class="block text-gray-700 text-lg font-bold mb-2" for="full-url">
-    Enter you URL
+    Enter your URL
   </label>
   <div class="flex items-center border-b border-b-2 border-red-500 py-2">
     <input class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none" type="url" name="full-url" id="url-input" placeholder="URL" aria-label="Full name" />
