Update views, Move code into src folder

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -5,7 +5,7 @@
   </label>
   <div class="flex items-center border-b border-b-2 border-red-500 py-2">
     <input class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none" type="url" name="full-url" id="url-input" placeholder="URL" aria-label="Full name" />
-    <button class="flex-shrink-0 bg-red-500 hover:bg-red-700 border-red-500 hover:border-red-700 text-base border-4 text-white py-1 px-2 rounded" type="submit">
+    <button id="submit-url" class="flex-shrink-0 bg-red-500 hover:bg-red-700 border-red-500 hover:border-red-700 text-base border-4 text-white py-1 px-2 rounded" type="submit">
       Shrink
     </button>
   </div>
