--- a/src/views/partials/navbar.html
+++ b/src/views/partials/navbar.html
@@ -1,16 +1,16 @@
 <nav class="flex items-center justify-between flex-wrap bg-red-500 p-6">
   <div class="flex items-center flex-shrink-0 text-white mr-6">
-    <img src="https://www.svgrepo.com/show/7355/cherry.svg" alt="cherry" width="85" />
-    <span class="font-semibold text-3xl tracking-tight">Cherry Shortener</span>
+    <img src="https://www.svgrepo.com/show/7355/cherry.svg" alt="cherry" width="80" />
+    <span class="font-semibold text-2xl tracking-tight">Cherry Shortener</span>
   </div>
   <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
     <div class="text-sm lg:flex-grow">
       <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-red-200 hover:text-white"> </a>
     </div>
     <div>
-      <a href="https://github.com/irevenko/url-shortener" class="inline-block text-xl px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-red-500 hover:bg-white mt-4 lg:mt-0">
+      <a href="https://github.com/irevenko/url-shortener" class="inline-block bg-red-400 hover:bg-red-400 text-white font-bold py-2 px-6 border-b-4 red-400 hover:border-red-100 rounded" target="_blank">
         <img width=28 class="inline-block" src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn.onlinewebfonts.com%2Fsvg%2Fimg_4266.png&f=1&nofb=1">
-         Github
+         Source Code
       </a>
     </div>
   </div>
